--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
+              <td style="padding:20px;width:30%;vertical-align:middle">
                 <img width="160" src="images/InferAligner.jpg" alt="InferAligner" style="border-style: none">
               </td>
-              <td width="75%" valign="middle">
+              <td style="padding:20px;width:70%;vertical-align:top">
                 <p>
                   <a href="https://arxiv.org/abs/2401.11206">
                     <papertitle>InferAligner: Inference-Time Alignment for Harmlessness through Cross-Model Guidance</papertitle>
@@ -80,10 +80,10 @@
             </tr>
             
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
+              <td style="padding:20px;width:30%;vertical-align:middle">
                 <img width="160" src="images/watermark.jpeg" alt="watermark" style="border-style: none">
               </td>
-              <td width="75%" valign="middle">
+              <td style="padding:20px;width:70%;vertical-align:top">
                 <p>
                   <a href="https://arxiv.org/abs/2310.11237">
                     <papertitle>Watermarking LLMs with Weight Quantization</papertitle>
@@ -103,10 +103,10 @@
             </tr>
 
             <tr>
-              <td style="padding:20px;width:25%;vertical-align:middle">
+              <td style="padding:20px;width:30%;vertical-align:middle">
                 <img width="160" src="images/SeqXGPT.png" alt="SeqXGPT" style="border-style: none">
               </td>
-              <td width="75%" valign="middle">
+              <td style="padding:20px;width:70%;vertical-align:top">
                 <p>
                   <a href="https://arxiv.org/abs/2310.08903">
                     <papertitle>SeqXGPT: Sentence-Level AI-Generated Text Detection</papertitle>
