--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                   <name>Botian Jiang</name>
                 </p>
                 <p>
-                  Self-Introduction
+                  Hi! I am a first year M.S. student of FudanNLPLab at Fudan University, supervised by Prof. Xipeng Qiu. I obtained my B.S. degree at Fudan University in 2022, advised by Prof. Yanghua Xiao. Previously, I had an internship at Metabit Trading and I am still highly interested in research-related roles in investment.
+
+                  I am expected to graduate in June 2026 and seeking Ph.D opportunities worldwide. I'm also open to academic collaboration opportunities. Please feel free to contact me by fdutian@gmail.com if you are interested!
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:FDUTian@gmail.com">Email</a> &nbsp/&nbsp
@@ -40,7 +42,9 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <heading>Research</heading>
                 <p>
-                  I am interested in <strong> natural language processing</strong>  and <strong> artificial intelligence</strong>, especially in the following directions:
+                  I am interested in <strong>Machine Learning</strong> and <strong>Natural Language Processing</strong>, especially in the following directions:
+                  1. <strong>Multimodal Learning</strong>: Enable the model to have the capability to understand and generate multiple modalities.
+                  2. <strong>Model Architecture</strong>: Modify existing model architectures or add components to them or explore new model architectures to enhance model capabilities or reduce costs.
                 </p>
               </td>
             </tr>
