--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                   I am interested in <strong>Machine Learning</strong> and <strong>Natural Language Processing</strong>, especially in the following directions:
                 </p>
                 <p>
-                  1. <strong>Multimodal Learning</strong>: Enable the model to have the capability to understand and generate multiple modalities.
+                  (1) <strong>Multimodal Learning</strong>: Enable the model to have the capability to understand and generate multiple modalities.
                 </p>
                 <p>
-                  2. <strong>Model Architecture</strong>: Modify existing model architectures or add components to them or explore new model architectures to enhance model capabilities or reduce costs.
+                  (2) <strong>Model Architecture</strong>: Modify existing model architectures or add components to them or explore new model architectures to enhance model capabilities or reduce costs.
                 </p>
               </td>
             </tr>
