--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   Hi! I am a first year M.S. student of FudanNLPLab at Fudan University, supervised by Prof. Xipeng Qiu. I obtained my B.S. degree at Fudan University in 2022, advised by Prof. Yanghua Xiao. Previously, I had an internship at Metabit Trading and I am still highly interested in research-related roles in investment.
                 </p>
                 <p>
-                  I am expected to graduate in June 2026 and seeking Ph.D opportunities worldwide. I'm also open to academic collaboration opportunities. Please feel free to contact me by fdutian@gmail.com if you are interested!
+                  I am expected to graduate in June 2026 and seeking Ph.D opportunities worldwide. I'm also open to academic collaboration opportunities. Please feel free to contact me by  <a href="mailto:fdutian@gmail.com">fdutian@gmail.com</a>if you are interested!
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:FDUTian@gmail.com">Email</a> &nbsp/&nbsp
