--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <name>Botian Jiang</name>
                 </p>
                 <p>
-                  Hi! I am a first year M.S. student of FudanNLPLab at Fudan University, supervised by Prof. Xipeng Qiu. I obtained my B.S. degree at Fudan University in 2022, advised by Prof. Yanghua Xiao. Previously, I had an internship at Metabit Trading and I am still highly interested in research-related roles in investment.
+                  Hi! I am a first year M.S. student of <a href="https://nlp.fudan.edu.cn/">NLP Lab</a> at <a href="https://www.fudan.edu.cn/en/">Fudan University</a>, supervised by Prof. <a href="https://xpqiu.github.io/">Xipeng Qiu</a>. I obtained my B.S. degree at Fudan University in 2022, advised by Prof. <a href="https://scholar.google.com/citations?user=odFW4FoAAAAJ&hl=zh-CN">Yanghua Xiao</a>. Previously, I had an internship at Metabit Trading and I am still highly interested in research-related roles in investment.
                 </p>
                 <p>
                   I am expected to graduate in June 2026 and seeking Ph.D opportunities worldwide. I'm also open to academic collaboration opportunities. Please feel free to contact me by  <a href="mailto:fdutian@gmail.com">fdutian@gmail.com</a>if you are interested!
